fix of styling bug that display links in wrong color

--- a/public/main.css
+++ b/public/main.css
@@ -69,7 +69,7 @@ select {
 	background-color: lightgrey;
 }
 
-a {
+p > a {
 	color: #4CAF50;
 	text-decoration: none;
 }
